# perf

./: .gitignore  Cargo.toml  Justfile  README.md  brawl.db  codecov.yml  deny.toml  diesel.toml  docker-compose.yaml  problem.md
.config/: hakari.toml
.github/: brawl.toml
.github/workflows/: audit.yaml  ci.yaml
cli/: Cargo.toml  README.md
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_merge_queue.rs
migrations/: schema.patch  schema.unpatched.rs
migrations/2024-12-11-131337_github/: down.sql  up.sql
server/: Cargo.toml  README.md
server/src/: auto_start.rs  ci.rs  config.rs  global.rs  lib.rs  main.rs  pr.rs  schema.rs  schema_enums.rs  utils.rs
server/src/command/: cancel.rs  dry_run.rs  merge.rs  mod.rs  ping.rs  pr.rs  retry.rs  review.rs  utils.rs
server/src/database/: ci_run.rs  ci_run_check.rs  enums.rs  mod.rs  pr.rs  schema.rs
server/src/entities/: merge_queue.rs  mod.rs  prelude.rs
server/src/github/: auto_start.rs  ci.rs  config.rs  installation.rs  merge_workflow.rs  mod.rs  models.rs  repo.rs  webhook.rs
server/src/github/messages/: commit_approved.md  commit_message.md  error.md  error_no_body.md  merge_conflict.md  mod.rs  pong.md  tests_failed.md  tests_pass.md  tests_pass_merge.md  tests_start.md  tests_timeout.md
server/src/github/webhook/: check_event.rs  mod.rs
server/src/github/webhook/command/: cancel.rs  dry_run.rs  pr.rs  retry.rs  review.rs  utils.rs
server/src/schema/: ci.rs  ci_checks.rs  enums.rs  mod.rs  pr.rs
server/src/webhook/: check_event.rs  mod.rs
workspace-hack/: Cargo.toml
