[workspace]
members = [
    "cli",
    "server",
    "migration",
    "workspace-hack",
]

resolver = "2"

[profile.release-debug]
inherits = "release"
debug = true

[patch.crates-io.scuffle-workspace-hack]
path = "workspace-hack"

[workspace.dependencies]
scuffle-workspace-hack = { path = "workspace-hack" }
migration = { path = "migration" }
