[package]
name = "scuffle-perf-cli"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/scufflecloud/perf"
authors = ["Scuffle <opensource@scuffle.cloud>"]
readme = "README.md"
documentation = "https://docs.rs/scuffle-perf-cli"
license = "MIT OR Apache-2.0"
description = "A cli tool to upload performance data to Scuffle Perf"
keywords = ["performance", "monitoring", "ci"]

[dependencies]
scuffle-workspace-hack.workspace = true
