[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.42.0", features = ["full"] }
sea-orm-migration = { version = "1.1.2", features = ["runtime-tokio-rustls", "sqlx-postgres", "sqlx-sqlite"] }
